--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   backend:
     breadcrumbs:
+      older_versions: "Previous versions"
       skins: Skins
       skins_new: New skin
       skins_edit: Edit skin
@@ -9,6 +10,10 @@ en:
       skins: Skins
 
   skins:
+    new_version_help: "If you want to create a new version of the skin, the skin name / zip file name must match the pattern: my_skin-{version} / my_skin-{version}.zip (eg. my_skin-2 / my_skin-2.zip)"
+    deleted: "Skin has been deleted"
+    updated: "Skin has been updated"
+    created: "Skin has been created"
     index_title: Skins
     index_add_new: Add new skin
     edit_title: Edit skin
@@ -21,19 +26,14 @@ en:
     correct_structure: "Valid zip structure:"
     skin_name: Skin name
     requirements: "Requirements:"
+    version: "Version"
 
+    older_versions: "Previous versions"
     zip_name_skin_name: Zip file name must match the name of the included skins
     uniq_name: The skin name must be unique 
     only_css_html: "Currently supported formats styles: <b>.css</b>"
     only_js_html: "Currently supported formats scripts: <b>.js</b>"
     image_format_html: "Photos should be in the format: <b>.jpg .gif .png</b>"
-
-    updated: "Skin has been saved"
-    deleted: "Skn has been deleted"
-    created: "Skin has been created"
-    not_updated: "Skin has NOT been updated"
-    not_deleted: "Skin has NOT beed deleted"
-    not_created: "Skin has not been created"
 
   skin_files:
     name: Name
@@ -61,6 +61,9 @@ en:
     unsaved_changes: "AktThe currently open file has unsaved changes, are you sure you want to continue?"
     alert_before_delete: Are you sure you want to delete this file?
     better_dont_delete_next_time: "See what you delete, no recovery image for now"
+
+  contact_mailer:
+    mail_subject: "Contact form"
 
   activerecord:
     attributes:
